log/build_2024-05-18_19-30-38/robotics/stderr.log
  File "/home/paolo/ros2_ws/install/robotics/lib/python3.10/site-packages/robotics/variable_robot_kinematics.py", line 59
    if movement_vector = None: return
       ^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Maybe you meant '==' or ':=' instead of '='?

